base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pandas-bot
  namespace: demo
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: pandas-bot
  template:
    metadata:
      labels:
        app: pandas-bot
    spec:
      containers:
      - name: pandas-bot
        # 우리가 Tekton으로 빌드한 바로 그 이미지 주소!
        image: registry.ocp.test.com:5000/demo/pandas-bot:latest
        ports:
        - containerPort: 8080
