base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pandas-bot-service
  namespace: demo
spec:
  selector:
    app: pandas-bot
  ports:
    - port: 80
      targetPort: 8080
